--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>carla_port</name>
+  <name>carla_matlab_dynamics_ros_plugin</name>
   <version>0.0.0</version>
-  <description>The carla_port package</description>
+  <description>The carla_matlab_dynamics_ros_plugin package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/carla_port</url> -->
+  <!-- <url type="website">http://wiki.ros.org/carla_matlab_dynamics_ros_plugin</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
